--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 * {
   font-family: 'Courier New', Courier, monospace;
   margin: 0;
@@ -97,10 +103,13 @@ html {
   justify-content: space-around;
   flex-wrap: wrap;
 }
+.link-card-styling{
+  width: 30%;
+}
 
 .card {
   height: 200px;
-  width: 30%;
+  width: 100%;
   border-style: solid;
   border-radius: 30px;
   border-width: 1px;
