--- a/src/emoji.css
+++ b/src/emoji.css
@@ -9,6 +9,74 @@
 }
 
 #singular__emoji {
+    margin: 10px;
+    padding: 10px;
+    border: 5px solid #FFFFB7;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#singularemojileft {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+}
+
+#buttonperemoji {
+    border: 5px solid #FFFFB7;
+    border-radius: 12px;
+    padding: 0px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+}
+
+#textbackstyling {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    font-size: 24px;
+}
+
+#emojiitself {
+    display: flex;
+    align-items: center;
+}
+
+.emojicoded {
+    font-size: 10rem;
+}
+
+#singularemojiright {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 50%;
+}
+
+#rightemojidesc {
+    display: flex;
+    align-items: center;
+}
+@media (min-width: 769px) {
+#singular__emoji--container {
+    display: flex;
+    height: calc(100vh - 196px);
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+#singular__emoji {
     margin: 30px;
     padding: 30px;
     border: 5px solid #FFFFB7;
@@ -62,4 +130,5 @@
 #rightemojidesc {
     display: flex;
     align-items: center;
+}
 }
