--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,10 @@ a {
 body {
   background-color: rgb(255, 255, 255);
 }
-
+.landing-page__left {
+  height: 100px;
+  width: 100px;
+}
 nav {
   width: 100%;
   max-width: 1200px;
@@ -32,6 +35,273 @@ nav {
   align-items: center;
   justify-content: space-between;
   padding: 20px;
+}
+.search_label{
+  display: none;
+}
+
+footer {
+  width: 100%;
+
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.nav__left,
+.nav__right {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+}
+
+.nav__title {
+  margin: 0;
+  font-size: 26px;
+}
+
+figure {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 100%;
+}
+
+.nav__logo {
+  height: 40px;
+}
+
+section {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+#search {
+  width: 100%;
+  position: sticky;
+  padding: 5px 10px;
+  border-color: black;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 50px;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.white {
+  color: aliceblue;
+}
+
+#results {
+  margin: 0px auto;
+  display: flex;
+  align-items: center;
+  justify-content:flex-start;
+  flex-wrap: wrap;
+}
+.link-card-styling{
+  width: 30%;
+  text-align: center;
+}
+p{
+  font-size: 10px;
+}
+.card {
+  height: 200px;
+  width: 100%;
+  border-style: solid;
+  border-radius: 30px;
+  border-width: 1px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 20px;
+  margin: 20px 0px;
+}
+
+.Submit {
+  color: antiquewhite;
+  background-color: black;
+  position: relative;
+
+  border-style: solid;
+  border-color: black;
+  border-radius: 30px;
+  border-width: 1px;
+  padding: 5px 4px;
+  transition: all 0.2s ease-in-out;
+}
+.text-icon{
+  display: block;
+}
+.white{
+  display: none;
+}
+
+.Submit:hover {
+  background-color: aliceblue;
+  color: black;
+}
+
+.Submit:hover .white {
+  color: black;
+}
+
+.emoji {
+  align-self: center;
+  font-size: 30px;
+  transition: all 0.2s ease-in-out;
+
+}
+
+.emoji:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
+.video {
+  height: 100px;
+  width: 100px;
+  background-image: url("assets/1223.mp4");
+}
+
+header,
+footer {
+  background-color: #ffffb7;
+}
+
+.landing-page {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.landing-page-main {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.landing-page-notmain {
+  height: 20%;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.yellow {
+  color: #ffd400;
+}
+
+p {
+  font-weight: 600;
+}
+
+h1 {
+  font-weight: 900;
+}
+
+.landing-page__title {
+  font-size: 24px;
+  text-align: center;
+}
+
+.landing-page__subtitle {
+  font-size: 14px;
+  text-align: center;
+}
+
+.heartbeat {
+  animation: heartbeat 1.5s ease-in-out infinite both;
+}
+
+@keyframes heartbeat {
+  from {
+    transform: scale(1);
+    transform-origin: center center;
+    animation-timing-function: ease-out;
+  }
+
+  10% {
+    transform: scale(0.91);
+    animation-timing-function: ease-in;
+  }
+
+  17% {
+    transform: scale(0.98);
+    animation-timing-function: ease-out;
+  }
+
+  33% {
+    transform: scale(0.87);
+    animation-timing-function: ease-in;
+  }
+
+  45% {
+    transform: scale(1);
+    animation-timing-function: ease-out;
+  }
+}
+
+.color1 {
+  background-color: #fff192;
+}
+
+.color2 {
+  background-color: #ffd400;
+}
+
+.loading {
+  color: #444;
+  font-weight: bold;
+  margin: 0px auto;
+}
+
+.error {
+  color: red;
+  font-weight: bold;
+  margin: 20px;
+}
+
+.card {
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+.emoji {
+  font-size: 2rem;
+}
+@media (min-width: 768px) {
+  nav {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+.landing-page__left {
+  height: 200px;
+  width: 200px;
 }
 
 footer {
@@ -270,4 +540,267 @@ h1 {
 
 .emoji {
   font-size: 2rem;
+}
+
+}
+
+@media (min-width: 1024px) {
+  nav {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+footer {
+  width: 100%;
+
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.nav__left,
+.nav__right {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: 25%;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+}
+
+.nav__title {
+  margin: 0;
+  font-size: 26px;
+}
+
+figure {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 100%;
+}
+
+.nav__logo {
+  height: 40px;
+}
+
+section {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+#search {
+  position: relative;
+  margin-left: 20px;
+  padding: 10px 20px;
+  border-color: black;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 50px;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.white {
+  color: aliceblue;
+}
+
+#results {
+  margin: 20px auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.link-card-styling{
+  width: 30%;
+}
+
+.card {
+  height: 200px;
+  width: 100%;
+  border-style: solid;
+  border-radius: 30px;
+  border-width: 1px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 20px;
+  margin: 20px 0px;
+}
+
+.Submit {
+  color: antiquewhite;
+  background-color: black;
+  position: absolute;
+  right: 0px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 30px;
+  border-width: 1px;
+  padding: 11px 16px;
+  transition: all 0.2s ease-in-out;
+}
+.white {
+  display: block;
+}
+.text-icon{
+  display: none;
+}
+.landing-page__left {
+  height: 400px;
+  width: 400px;
+}
+.Submit:hover {
+  background-color: aliceblue;
+  color: black;
+}
+
+.Submit:hover .white {
+  color: black;
+}
+
+.emoji {
+  align-self: center;
+  font-size: 30px;
+  transition: all 0.2s ease-in-out;
+
+}
+
+.emoji:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
+.video {
+  height: 100px;
+  width: 100px;
+  background-image: url("assets/1223.mp4");
+}
+
+header,
+footer {
+  background-color: #ffffb7;
+}
+
+.landing-page {
+  height: calc(100vh - 80px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.landing-page-main {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.landing-page-notmain {
+  height: 20%;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.yellow {
+  color: #ffd400;
+}
+
+p {
+  font-weight: 600;
+}
+
+h1 {
+  font-weight: 900;
+}
+
+.landing-page__title {
+  font-size: 48px;
+}
+
+.landing-page__subtitle {
+  font-size: 28px;
+}
+
+.heartbeat {
+  animation: heartbeat 1.5s ease-in-out infinite both;
+}
+
+@keyframes heartbeat {
+  from {
+    transform: scale(1);
+    transform-origin: center center;
+    animation-timing-function: ease-out;
+  }
+
+  10% {
+    transform: scale(0.91);
+    animation-timing-function: ease-in;
+  }
+
+  17% {
+    transform: scale(0.98);
+    animation-timing-function: ease-out;
+  }
+
+  33% {
+    transform: scale(0.87);
+    animation-timing-function: ease-in;
+  }
+
+  45% {
+    transform: scale(1);
+    animation-timing-function: ease-out;
+  }
+}
+
+.color1 {
+  background-color: #fff192;
+}
+
+.color2 {
+  background-color: #ffd400;
+}
+
+.loading {
+  color: #444;
+  font-weight: bold;
+  margin: 20px;
+}
+
+.error {
+  color: red;
+  font-weight: bold;
+  margin: 20px;
+}
+
+.card {
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+.emoji {
+  font-size: 2rem;
+}
+
 }
